guacamole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
spec:
  rules:
    - host: guacamole.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: guacamole-svc
                port: 
                  number: 8080
